--- a/Trabajo 1/Trabajo1.Rmd
+++ b/Trabajo 1/Trabajo1.Rmd
@@ -92,24 +92,25 @@ encuesta$Q27_PorcentDivisor[encuesta$Q27_PorcentDivisor == 0.5] <- 50
 ## Filtros
 
 
+
 ## Filtro mujeres de estadistica.
 
-Pap_fem_sta <- encuesta %>%
+femeninoEstadistica <- encuesta %>%
   filter(encuesta$Q01_Genero == "2 : Femenino" & encuesta$Q03_Carrera == "3 : Estadística")
 
 ## Filtro hombres de estadistica.
 
-Pap_mas_sta <- encuesta %>%
+masculinoEstadistica <- encuesta %>%
   filter(encuesta$Q01_Genero == "1 : Masculino" & encuesta$Q03_Carrera == "3 : Estadística")
 
 ## Filtro mujeres de Sistemas.
 
-Pap_fem_sis <- encuesta %>%
+femeninoSistemas <- encuesta %>%
   filter(encuesta$Q01_Genero == "2 : Femenino" & encuesta$Q03_Carrera == "2 : Ingeniería de sistemas e informática")
 
 ## Filtro hombres de Sistemas.
 
-Pap_mas_sis <- encuesta %>%
+masculinoSistemas <- encuesta %>%
   filter(encuesta$Q01_Genero == "1 : Masculino" & encuesta$Q03_Carrera == "2 : Ingeniería de sistemas e informática")
 
 
@@ -123,18 +124,18 @@ Pap_mas_sis <- encuesta %>%
 
 ## Mujeres estadistica
 
-Prom_fem_t <- mean(Pap_fem_sta$Q08_PAPA)
+PromedioFemEstadis <- mean(femeninoEstadistica$Q08_PAPA)
 
 ## Hombres estadistica
 
-Prom_mas_t <- mean(Pap_mas_sta$Q08_PAPA)
+PromedioMasEstadis <- mean(masculinoEstadistica$Q08_PAPA)
 
 ## Mujeres Sistemas
 
-Prom_fem_s <- mean(Pap_fem_sis$Q08_PAPA)
+PromedioFemSistema <- mean(femeninoSistemas$Q08_PAPA)
 ## Hombres Sistemas
 
-Prom_mas_s <- mean(Pap_mas_sis$Q08_PAPA)
+PromedioMasSistema <- mean(masculinoSistemas$Q08_PAPA)
 
 ```
 
@@ -143,12 +144,7 @@ Prom_mas_s <- mean(Pap_mas_sis$Q08_PAPA)
 
 ## Se crea una matriz para poder hacer la grafica de barras.
 
-Femenino_estadistica <- Prom_fem_t 
-Mascuino_estadistica <- Prom_mas_t 
-Femenino_Ing.Sistemas <- Prom_fem_s 
-Masculino_Ing.Sistemas <- Prom_mas_s
-
-Tabla_datos <- t(matrix(cbind(Femenino_estadistica, Femenino_Ing.Sistemas, Mascuino_estadistica, Masculino_Ing.Sistemas )))
+Tabla_datos <- t(matrix(cbind(PromedioFemEstadis, PromedioFemSistema, PromedioMasEstadis, PromedioMasSistema)))
 
 Tabla_datos
   colnames(Tabla_datos) <- c("Femenino:estadistica", "Femenino:Ing.Sistemas", "Masculino:estadistica", "Masculino:Ing.Sistemas")
@@ -167,45 +163,46 @@ barplot(Tabla_datos,
 ## Pregunta: ¿en qué carrera están las mujeres y hombres con el mayor semestre?
 
 ```{r}
-dt <- encuesta[,c("Q01_Genero","Q03_Carrera", "Q04_Semestre" )] # Nueva base con las variables para este analisis
+baseCarGenSem <- encuesta[,c("Q01_Genero","Q03_Carrera", "Q04_Semestre" )] # Nueva base con las variables para este analisis
 
-#dt <- dt %>%
-#  filter(dt$Q03_Carrera == "3 : Estadística" | dt$Q03_Carrera == "2 : Ingeniería de sistemas e #informática" )
 
-dt$sem_int <- dt$Q04_Semestre
-dt$sem_int[dt$Q04_Semestre >= 1.0 & dt$Q04_Semestre < 2.0]  <- "[1, 2)"
-dt$sem_int[dt$Q04_Semestre >= 2.0 & dt$Q04_Semestre < 3.0]  <- "[2, 3)"
-dt$sem_int[dt$Q04_Semestre >= 3.0 & dt$Q04_Semestre < 4.0]  <- "[3, 4)"
-dt$sem_int[dt$Q04_Semestre >= 4.0 & dt$Q04_Semestre < 5.0]  <- "[4, 5)"
-dt$sem_int[dt$Q04_Semestre >= 5.0 & dt$Q04_Semestre < 6.0]  <- "[5, 6)"
-dt$sem_int[dt$Q04_Semestre >= 6.0 & dt$Q04_Semestre < 7.0]  <- "[6, 7)"
-dt$sem_int[dt$Q04_Semestre >= 7.0 & dt$Q04_Semestre < 8.0]  <- "[7, 8)"
-dt$sem_int[dt$Q04_Semestre >= 8.0 & dt$Q04_Semestre < 9.0]  <- "[8, 9)"
+baseCarGenSem$semestreIntervalo <- baseCarGenSem$Q04_Semestre
+baseCarGenSem$semestreIntervalo[baseCarGenSem$Q04_Semestre >= 1.0 & baseCarGenSem$Q04_Semestre < 2.0]  <- "[1, 2)"
+baseCarGenSem$semestreIntervalo[baseCarGenSem$Q04_Semestre >= 2.0 & baseCarGenSem$Q04_Semestre < 3.0]  <- "[2, 3)"
+baseCarGenSem$semestreIntervalo[baseCarGenSem$Q04_Semestre >= 3.0 & baseCarGenSem$Q04_Semestre < 4.0]  <- "[3, 4)"
+baseCarGenSem$semestreIntervalo[baseCarGenSem$Q04_Semestre >= 4.0 & baseCarGenSem$Q04_Semestre < 5.0]  <- "[4, 5)"
+baseCarGenSem$semestreIntervalo[baseCarGenSem$Q04_Semestre >= 5.0 & baseCarGenSem$Q04_Semestre < 6.0]  <- "[5, 6)"
+baseCarGenSem$semestreIntervalo[baseCarGenSem$Q04_Semestre >= 6.0 & baseCarGenSem$Q04_Semestre < 7.0]  <- "[6, 7)"
+baseCarGenSem$semestreIntervalo[baseCarGenSem$Q04_Semestre >= 7.0 & baseCarGenSem$Q04_Semestre < 8.0]  <- "[7, 8)"
+baseCarGenSem$semestreIntervalo[baseCarGenSem$Q04_Semestre >= 8.0 & baseCarGenSem$Q04_Semestre < 9.0]  <- "[8, 9)"
 
-dt$car_str <- dt$Q03_Carrera
-dt$car_str[dt$Q03_Carrera == "2 : Ingeniería de sistemas e informática"] <- "Ing.Sistemas"
-dt$car_str[dt$Q03_Carrera == "3 : Estadística"] <- "Estadística"
+baseCarGenSem$carreras <- baseCarGenSem$Q03_Carrera
+baseCarGenSem$carreras[baseCarGenSem$Q03_Carrera == "2 : Ingeniería de sistemas e informática"] <- "Ing.Sistemas"
+baseCarGenSem$carreras[baseCarGenSem$Q03_Carrera == "3 : Estadística"] <- "Estadística"
+baseCarGenSem$carreras[baseCarGenSem$Q03_Carrera == "1 : Matemáticas" | 
+             baseCarGenSem$Q03_Carrera == "6 : Ingeniería industrial" |
+             baseCarGenSem$Q03_Carrera == "5 : Ingeniería física" |
+             baseCarGenSem$Q03_Carrera == "4 : Ingeniería administrativa" |
+             baseCarGenSem$Q03_Carrera == "7 : Otra"] <- "Otras"
 
 ```
 
 ```{r}
-table(dt$Q01_Genero, dt$sem_int)
-table(dt$Q03_Carrera, dt$sem_int)
-table(dt$Q03_Carrera, dt$sem_int,dt$Q01_Genero)
 
-dt_m <- dt %>%
-  filter(dt$Q01_Genero == "1 : Masculino")
-dt_f <- dt %>%
-  filter(dt$Q01_Genero == "2 : Femenino")
+tablaMasculina <- baseCarGenSem %>%
+  filter(baseCarGenSem$Q01_Genero == "1 : Masculino")
+tablaFemenina <- baseCarGenSem %>%
+  filter(baseCarGenSem$Q01_Genero == "2 : Femenino")
 
-a1 <- table(dt_m$car_str, dt_m$sem_int)
-a2 <- table(dt_f$car_str, dt_f$sem_int)
+
+masculinoCarSem <- table(tablaMasculina$carreras, tablaMasculina$semestreIntervalo)
+femeninoCarSem <- table(tablaFemenina$carreras, tablaFemenina$semestreIntervalo)
 
 palette(c("#469dff", "#46ff54", "#ff4646", "#ffcd46", "#46ffdd", "#a846ff", "#FFF798"))
 
 
  
-barplot(a2, 
+barplot(femeninoCarSem, 
         beside = TRUE, 
         las = 1, 
         ylim = c(0, 30), 
@@ -214,11 +211,11 @@ barplot(a2,
         legend = TRUE)
 
 
-barplot(a1, beside = TRUE, 
+barplot(masculinoCarSem, beside = TRUE, 
         las = 1, 
         main = "Masculino - semestre", 
         ylim = c(0, 30),
-        col = c(1, 2, 3, 4, 5, 6, 7),
+        col = c(1, 2, 3),
         legend = TRUE)
 
 ```
@@ -228,7 +225,7 @@ barplot(a1, beside = TRUE,
 ```{r}
 # filtro de las personas que viven en el area metropolitana
 
-per_metro <- encuesta %>%
+personarAreaMetro <- encuesta %>%
   filter(encuesta$Q09_EnAreaMetropolitana == 1)
 
 
@@ -245,32 +242,38 @@ per_metro <- encuesta %>%
 #Los efectos del cambio climático son naturales, y el escándalo se debe a conspiraciones de ambientalistas y de ciertos gremios económicos.
 
 # Las ráfagas solares causan los sismos en la tierra.
-```
+
 ## las personas que al menos crean en una de estas conspiraciones falsas será tomada como un "SI" de que si cree en conspiraciones falsas y las demas serán marcadas con "NO".
+```
+
+
+
+```{r}
 
 ## Se crea una nueva variable para guardar estos datos
 
-```{r}
-per_metro$cree_sn[per_metro$Q15_Alunizaje == 1 | 
-                    per_metro$Q18_Vacunas == 1 | 
-                    per_metro$Q21_TierraHueca == 1|
-                    per_metro$Q22_alienigenas == 1 |
-                    per_metro$Q23_CambioClimatico == 1 |
-                    per_metro$Q20_RafagasSolares == 1] <- "SI"
+personarAreaMetro$creenEnConspira[personarAreaMetro$Q15_Alunizaje == 1 | 
+                    personarAreaMetro$Q18_Vacunas == 1 | 
+                    personarAreaMetro$Q21_TierraHueca == 1|
+                    personarAreaMetro$Q22_alienigenas == 1 |
+                    personarAreaMetro$Q23_CambioClimatico == 1 |
+                    personarAreaMetro$Q20_RafagasSolares == 1] <- "SI"
 
 
+# Se filtran las personas que creen en conspiraciones falsas
+siCreen <- personarAreaMetro %>%
+  filter(personarAreaMetro$creenEnConspira == "SI")
 
-creen_cons <- per_metro %>%
-  filter
+siCreen$Q10_Estrato[siCreen$Q10_Estrato == 2] <- "Estrato 2"
+siCreen$Q10_Estrato[siCreen$Q10_Estrato == 3] <- "Estrato 3"
+siCreen$Q10_Estrato[siCreen$Q10_Estrato == 4] <- "Estrato 4"
+siCreen$Q10_Estrato[siCreen$Q10_Estrato == 5] <- "Estrato 5"
 
-creen_cons$Q10_Estrato[creen_cons$Q10_Estrato == 2] <- "Estrato 2"
-creen_cons$Q10_Estrato[creen_cons$Q10_Estrato == 3] <- "Estrato 3"
-creen_cons$Q10_Estrato[creen_cons$Q10_Estrato == 4] <- "Estrato 4"
-creen_cons$Q10_Estrato[creen_cons$Q10_Estrato == 5] <- "Estrato 5"
+# Se crea una tabla que guarda solo las personas que creen en conspiraciones y el estrato
 
-tabla_metro <- table(creen_cons$Q10_Estrato, creen_cons$cree_sn)
+tablaAreaMetro <- table(siCreen$Q10_Estrato, siCreen$creenEnConspira)
 
-barplot(tabla_metro, 
+barplot(tablaAreaMetro, 
         legend = TRUE, 
         ylim = c(0, 25),
         beside = TRUE ,
